# Projects

MY_PROJECTS/(00)21_Piscine/BSQ/: Makefile  auteur  main.c  map  map1  map2  map3  map4  map5
MY_PROJECTS/(00)21_Piscine/BSQ/includes/: bsq.h
MY_PROJECTS/(00)21_Piscine/BSQ/src/: ft_bsq_find.c  ft_char_compare.c  ft_check_string.c  ft_create_mapdata.c  ft_framecheck.c  ft_map_read_and_print.c
MY_PROJECTS/(00)21_Piscine/other/b/: Makefile  bsq  file  main.c  mapgen  mapgenfile
MY_PROJECTS/(00)21_Piscine/other/cd/: Gmain.c  Makefile  main.c
MY_PROJECTS/(00)21_Piscine/other/evalexpr/: Makefile  do_op.c  eval_expr.c  ft_atoi.c  ft_putchar.c  ft_putnbr.c  ft_putstr.c  ft_strlen.c  high_oper.c  includes.h  low_oper.c  main.c  re_spaces.c
MY_PROJECTS/(00)21_Piscine/other/prov/: bsq
MY_PROJECTS/01.reload/1try/ex00/: exo.tar
MY_PROJECTS/01.reload/1try/ex03/: find_sh.sh
MY_PROJECTS/01.reload/1try/ex06/: ft_print_alphabet.c
MY_PROJECTS/01.reload/1try/ex07/: ft_print_numbers.c
MY_PROJECTS/01.reload/1try/ex08/: ft_is_negative.c
MY_PROJECTS/01.reload/1try/ex11/: ft_div_mod.c
MY_PROJECTS/01.reload/1try/ex12/: ft_iterative_factorial.c
MY_PROJECTS/01.reload/1try/ex13/: ft_recursive_factorial.c
MY_PROJECTS/01.reload/1try/ex15/: ft_putstr.c
MY_PROJECTS/01.reload/1try/ex16/: ft_strlen.c
MY_PROJECTS/01.reload/1try/ex18/: ft_print_params.c
MY_PROJECTS/01.reload/1try/ex19/: ft_sort_params.c
MY_PROJECTS/01.reload/1try/ex20/: ft_strdup.c
MY_PROJECTS/01.reload/1try/ex21/: ft_range.c
MY_PROJECTS/01.reload/1try/ex22/: ft_abs.h
MY_PROJECTS/01.reload/defex02/: clean
MY_PROJECTS/01.reload/defex06/: a.out  ft_print_alphabet.c  ft_putchar.c  main.c
MY_PROJECTS/01.reload/defex07/: a.out  main.c
MY_PROJECTS/01.reload/defex08/: a.out  ft_is_negative.c  main.c
MY_PROJECTS/01.reload/defex09/: a.out  ft_ft.c  main.c
MY_PROJECTS/01.reload/defex10/: a.out  main.c
MY_PROJECTS/01.reload/defex12(13)/: a.out  ft_recursive_factorial.c  main copy.c
MY_PROJECTS/01.reload/defex20/: a.out  ft_putstr.c  ft_strdup.c  main.c
MY_PROJECTS/01.reload/defex21/: a.out  ft_putstr.c  ft_range.c  main.c
MY_PROJECTS/01.reload/defex24/: Makefile
MY_PROJECTS/01.reload/defex27/: display_file.c
MY_PROJECTS/02.lib/lbradama/: Makefile  a.out  ft_atoi.c  ft_bzero.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdelone.c  ft_lstmap.c  ft_memalloc.c  ft_memcmp.c  ft_memmove.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_strchr.c  ft_strcpy.c  ft_strdel.c  ft_striteri.c  ft_strmap.c  ft_strmapi.c  ft_strnstr.c  ft_strrchr.c  ft_strstr.c  ft_toupper.c
MY_PROJECTS/02.lib/libft/: ft_isalnum.c  ft_memdel.c  ft_memset.c  ft_putchar.c  ft_putnbr.c  ft_putstr_fd.c  ft_strcat.c  ft_striter.c  ft_strlen.c  ft_strnequ.c  ft_strtrim.c  ft_tolower.c  intmax.c
MY_PROJECTS/02.lib/libft2/: Makefile  abs.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_lstdel.c  ft_lstiter.c  ft_lstnew.c  ft_memccpy.c  ft_memchr.c  ft_memcpy.c  ft_putchar_fd.c  ft_putstr.c  ft_strclr.c  ft_strcmp.c  ft_strdup.c  ft_strequ.c  ft_strjoin.c  ft_strlcat.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnew.c  ft_strsplit.c  ft_strsub.c  intmin.c  kish.c  libft.h  nullcheak.c
MY_PROJECTS/03.gnl/gnl/: get_next_line.c  get_next_line.h
MY_PROJECTS/03.gnl/gnltests/: .gitignore  Makefile  README.md  gnltests.c  gnltests.h
MY_PROJECTS/04.fillit/fillit/: fillit  test
MY_PROJECTS/04.fillit/other/: Makefile
MY_PROJECTS/08.lem-in/: Makefile  array.c  author  cpy_way_array.c  dijkstra_1.c  dijkstra_2.c  free.c  get_first_last_room.c  get_next_line.c  gnl.c  grafix.c  grafix_draw_ants.c  grafix_draw_line.c  grafix_draw_room_web.c  grafix_hooks.c  grafix_insert_ants.c  grafix_insert_rooms.c  grafix_make_step.c  karpov_globchansky_1.c  karpov_globchansky_2.c  karpov_globchansky_3.c  karpov_globchansky_4.c  kill_tlist.c  lem_in.h  main.c  make_linkage_1.c  make_linkage_2.c  new_room.c  prepare_ant_queue.c  print_ant_queues.c  queue.c  read_rooms.c  teleport_ants.c  temp.c
MY_PROJECTS/08.lem-in/img/: ant.xpm  black_hole.xpm  room.xpm
MY_PROJECTS/08.lem-in/libft/: Makefile  count_words.c  fprint.c  fprint_specifiers.c  ft_absi.c  ft_absll.c  ft_atoi.c  ft_atoll.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_list_bublesort.c  ft_list_murgesort.c  ft_lltoa.c  ft_lltoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdel_fag.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstnew_fag.c  ft_max_i.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min_i.c  ft_putchar.c  ft_putchar_fd.c  ft_putchar_fd_smpl.c  (+45 more)
MY_PROJECTS/08.lem-in/maps/: room_coord_duplicated  src01  src1  src2  src3  src4  src5  src6  src7
MY_PROJECTS/11.fdf/: CMakeLists.txt  Makefile  a.out  author  draw.c  fdf  fdf.h  isometric.c  mian.c  read_file.c  x_count.c
MY_PROJECTS/11.fdf/ft_printf/libft/: ft_bits_read_bit.c  ft_bits_to_string.c  ft_get_file.c  ft_isalnum.c  ft_isascii.c  ft_isdigit.c  ft_itoa_float.c  ft_itoa_long.c  ft_letter_replacement.c  ft_lst_monolith_from_array.c  ft_lst_stack_pop.c  ft_lst_strjoin_counter_out_cs.c  ft_lst_strjoin_counter_out_free.c  ft_lst_strjoin_sep.c  ft_lst_strjoin_sep_counter_out_free.c  ft_lst_to_array.c  ft_lst_to_array_free.c  ft_lstdelone.c  ft_lstnew_no_copy.c  ft_math_long_double_normilize.c  ft_math_longar_str_add.c  ft_math_longar_str_comparison.c  ft_math_root.c  ft_memalloc.c  ft_putstr_len.c  ft_range_str.c  ft_strjoin_free_2.c  ft_strmapi.c  ft_strncpy.c  ft_strnequ.c  ft_strnew_not_bzero.c  ft_strsub.c  ft_swap_byte.c  ft_toupper.c
MY_PROJECTS/11.fdf/include/: draw.c  fdf.h  main.c
MY_PROJECTS/11.fdf/include/libft/: Makefile
MY_PROJECTS/11.fdf/include/libft/ft_printf/: ft_printf.h
MY_PROJECTS/11.fdf/minilibx_macos/: mlx_rgb.c
MY_PROJECTS/11.fdf/src/: buttom.c  draw.c  get_param.c  help.c  main.c  menu.c  read_file.c
TESTS/42_printf_unit_tests/tests/: Makefile  file_paths
TESTS/my_test_system/: all.tar
TESTS/other:history/test_s_Vaney/: ft_memccpy.c  main.c
(+714 files in other folders)
