cmake_minimum_required(VERSION 3.16)
project(fdf C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(ft_printf/include)
include_directories(ft_printf/libft/includes)
include_directories(minilibx_macos)

add_executable(fdf
        ft_printf/include/head.h
        ft_printf/libft/includes/libft.h
        ft_printf/libft/ft_atoi.c
        ft_printf/libft/ft_atoi_llu.c
        ft_printf/libft/ft_binary_lst_search_content.c
        ft_printf/libft/ft_binary_lst_search_cs.c
        ft_printf/libft/ft_binary_lst_search_str_content.c
        ft_printf/libft/ft_binary_lst_strdel.c
        ft_printf/libft/ft_binary_lstadd.c
        ft_printf/libft/ft_binary_lstnew.c
        ft_printf/libft/ft_bits_copy.c
        ft_printf/libft/ft_bits_filler.c
        ft_printf/libft/ft_bits_listing.c
        ft_printf/libft/ft_bits_print.c
        ft_printf/libft/ft_bits_read_bit.c
        ft_printf/libft/ft_bits_reverse_bits_in_byte.c
        ft_printf/libft/ft_bits_reverse_bits_in_bytes.c
        ft_printf/libft/ft_bits_reverse_memory.c
        ft_printf/libft/ft_bits_shift.c
        ft_printf/libft/ft_bits_shift_left.c
        ft_printf/libft/ft_bits_shift_right.c
        ft_printf/libft/ft_bits_to_string.c
        ft_printf/libft/ft_bits_write_bit.c
        ft_printf/libft/ft_bzero.c
        ft_printf/libft/ft_free.c
        ft_printf/libft/ft_free_both.c
        ft_printf/libft/ft_free_two_dimensional_array.c
        ft_printf/libft/ft_get_all_files.c
        ft_printf/libft/ft_get_all_files_free.c
        ft_printf/libft/ft_get_arguments_command_line.c
        ft_printf/libft/ft_get_file.c
        ft_printf/libft/ft_isalnum.c
        ft_printf/libft/ft_isalpha.c
        ft_printf/libft/ft_isascii.c
        ft_printf/libft/ft_isdigit.c
        ft_printf/libft/ft_isprint.c
        ft_printf/libft/ft_issorted.c
        ft_printf/libft/ft_isspace.c
        ft_printf/libft/ft_itoa.c
        ft_printf/libft/ft_itoa_double.c
        ft_printf/libft/ft_itoa_float.c
        ft_printf/libft/ft_itoa_llu.c
        ft_printf/libft/ft_itoa_long.c
        ft_printf/libft/ft_itoa_long_double_old.c
        ft_printf/libft/ft_itoa_long_double_wrapper.c
        ft_printf/libft/ft_itoa_long_long.c
        ft_printf/libft/ft_jump.c
        ft_printf/libft/ft_jump_pointer_to_n.c
        ft_printf/libft/ft_letter_replacement.c
        ft_printf/libft/ft_lst_all_content_size.c
        ft_printf/libft/ft_lst_chain_len.c
        ft_printf/libft/ft_lst_copy_chain.c
        ft_printf/libft/ft_lst_cut.c
        ft_printf/libft/ft_lst_deduplication.c
        ft_printf/libft/ft_lst_free_chain.c
        ft_printf/libft/ft_lst_get_end.c
        ft_printf/libft/ft_lst_join.c
        ft_printf/libft/ft_lst_monolith_convert_to_monolith.c
        ft_printf/libft/ft_lst_monolith_from_array.c
        ft_printf/libft/ft_lst_monolith_its_monolith.c
        ft_printf/libft/ft_lst_monolith_join_chains.c
        ft_printf/libft/ft_lst_monolith_lstnew.c
        ft_printf/libft/ft_lst_monolith_sort_quick.c
        ft_printf/libft/ft_lst_putstr_free.c
        ft_printf/libft/ft_lst_putstr_free_cs.c
        ft_printf/libft/ft_lst_putstr_sep.c
        ft_printf/libft/ft_lst_putstr_sep_free.c
        ft_printf/libft/ft_lst_sort_quick.c
        ft_printf/libft/ft_lst_stack_empty_stack_num.c
        ft_printf/libft/ft_lst_stack_empty_stack_num_tightly.c
        ft_printf/libft/ft_lst_stack_is_empty.c
        ft_printf/libft/ft_lst_stack_keep_stacks.c
        ft_printf/libft/ft_lst_stack_new_stack.c
        ft_printf/libft/ft_lst_stack_pop.c
        ft_printf/libft/ft_lst_stack_push.c
        ft_printf/libft/ft_lst_stack_size.c
        ft_printf/libft/ft_lst_stack_top.c
        ft_printf/libft/ft_lst_strjoin.c
        ft_printf/libft/ft_lst_strjoin_counter_out.c
        ft_printf/libft/ft_lst_strjoin_counter_out_cs.c
        ft_printf/libft/ft_lst_strjoin_counter_out_free.c
        ft_printf/libft/ft_lst_strjoin_counter_out_free_cs.c
        ft_printf/libft/ft_lst_strjoin_cs.c
        ft_printf/libft/ft_lst_strjoin_free.c
        ft_printf/libft/ft_lst_strjoin_free_cs.c
        ft_printf/libft/ft_lst_strjoin_sep.c
        ft_printf/libft/ft_lst_strjoin_sep_counter_out.c
        ft_printf/libft/ft_lst_strjoin_sep_counter_out_free.c
        ft_printf/libft/ft_lst_strjoin_sep_free.c
        ft_printf/libft/ft_lst_strlen.c
        ft_printf/libft/ft_lst_strnew.c
        ft_printf/libft/ft_lst_to_array.c
        ft_printf/libft/ft_lst_to_array_free.c
        ft_printf/libft/ft_lst_to_array_nullterm.c
        ft_printf/libft/ft_lst_to_array_nullterm_free.c
        ft_printf/libft/ft_lst_turn.c
        ft_printf/libft/ft_lst_unit_transfer.c
        ft_printf/libft/ft_lst_unit_transfer_with_malloc.c
        ft_printf/libft/ft_lstadd.c
        ft_printf/libft/ft_lstadd_to_end.c
        ft_printf/libft/ft_lstdel.c
        ft_printf/libft/ft_lstdel_complite.c
        ft_printf/libft/ft_lstdelone.c
        ft_printf/libft/ft_lstiter.c
        ft_printf/libft/ft_lstmap.c
        ft_printf/libft/ft_lstnew.c
        ft_printf/libft/ft_lstnew_no_copy.c
        ft_printf/libft/ft_lstsearch_content.c
        ft_printf/libft/ft_lstsearch_cs.c
        ft_printf/libft/ft_lstsearch_cs_del.c
        ft_printf/libft/ft_lstsearch_cs_replace.c
        ft_printf/libft/ft_lstsearch_index.c
        ft_printf/libft/ft_lstsearch_str_content.c
        ft_printf/libft/ft_math_long_double_normilize.c
        ft_printf/libft/ft_math_longar_str_add.c
        ft_printf/libft/ft_math_longar_str_add_free_1.c
        ft_printf/libft/ft_math_longar_str_add_free_both.c
        ft_printf/libft/ft_math_longar_str_comparison.c
        ft_printf/libft/ft_math_longar_str_exponent_mix.c
        ft_printf/libft/ft_math_longar_str_exponent_mix_free.c
        ft_printf/libft/ft_math_longar_str_multi.c
        ft_printf/libft/ft_math_longar_str_multi_free_1.c
        ft_printf/libft/ft_math_longar_str_multi_free_both.c
        ft_printf/libft/ft_math_longar_str_subtraction.c
        ft_printf/libft/ft_math_module_int.c
        ft_printf/libft/ft_math_numlen_long.c
        ft_printf/libft/ft_math_numlen_long_double.c
        ft_printf/libft/ft_math_root.c
        ft_printf/libft/ft_math_rounding_down_double.c
        ft_printf/libft/ft_math_rounding_down_float.c
        ft_printf/libft/ft_math_rounding_down_l_double.c
        ft_printf/libft/ft_maxmin.c
        ft_printf/libft/ft_mem_reverse.c
        ft_printf/libft/ft_memalloc.c
        ft_printf/libft/ft_memccpy.c
        ft_printf/libft/ft_memchr.c
        ft_printf/libft/ft_memcmp.c
        ft_printf/libft/ft_memcpy.c
        ft_printf/libft/ft_memcpy_safe.c
        ft_printf/libft/ft_memdel.c
        ft_printf/libft/ft_memdup.c
        ft_printf/libft/ft_memjoin.c
        ft_printf/libft/ft_memmove.c
        ft_printf/libft/ft_memset.c
        ft_printf/libft/ft_new_null_str.c
        ft_printf/libft/ft_numch.c
        ft_printf/libft/ft_open_file_readonly.c
        ft_printf/libft/ft_print_two_dimensional_array.c
        ft_printf/libft/ft_putchar.c
        ft_printf/libft/ft_putchar_fd.c
        ft_printf/libft/ft_putendl.c
        ft_printf/libft/ft_putendl_fd.c
        ft_printf/libft/ft_putnbr.c
        ft_printf/libft/ft_putnbr_fd.c
        ft_printf/libft/ft_putstr.c
        ft_printf/libft/ft_putstr_fd.c
        ft_printf/libft/ft_putstr_len.c
        ft_printf/libft/ft_putstr_len_fd.c
        ft_printf/libft/ft_range_str.c
        ft_printf/libft/ft_sort_quick.c
        ft_printf/libft/ft_str_disnuller_end.c
        ft_printf/libft/ft_str_lower.c
        ft_printf/libft/ft_str_reverse.c
        ft_printf/libft/ft_str_upper.c
        ft_printf/libft/ft_str_width.c
        ft_printf/libft/ft_str_width_free.c
        ft_printf/libft/ft_strcat.c
        ft_printf/libft/ft_strchr.c
        ft_printf/libft/ft_strclr.c
        ft_printf/libft/ft_strcmp.c
        ft_printf/libft/ft_strcmp_no_spaces.c
        ft_printf/libft/ft_strcpy.c
        ft_printf/libft/ft_strdel.c
        ft_printf/libft/ft_strdup.c
        ft_printf/libft/ft_strdup_free.c
        ft_printf/libft/ft_strdup_n.c
        ft_printf/libft/ft_strdup_n_free.c
        ft_printf/libft/ft_strequ.c
        ft_printf/libft/ft_striter.c
        ft_printf/libft/ft_striteri.c
        ft_printf/libft/ft_strjoin.c
        ft_printf/libft/ft_strjoin_free_1.c
        ft_printf/libft/ft_strjoin_free_2.c
        ft_printf/libft/ft_strjoin_free_both.c
        ft_printf/libft/ft_strlcat.c
        ft_printf/libft/ft_strlen.c
        ft_printf/libft/ft_strlen_safe.c
        ft_printf/libft/ft_strmap.c
        ft_printf/libft/ft_strmapi.c
        ft_printf/libft/ft_strncat.c
        ft_printf/libft/ft_strncmp.c
        ft_printf/libft/ft_strncpy.c
        ft_printf/libft/ft_strnequ.c
        ft_printf/libft/ft_strnew.c
        ft_printf/libft/ft_strnew_filler.c
        ft_printf/libft/ft_strnew_not_bzero.c
        ft_printf/libft/ft_strnstr.c
        ft_printf/libft/ft_strrchr.c
        ft_printf/libft/ft_strsplit.c
        ft_printf/libft/ft_strsplit_spaces.c
        ft_printf/libft/ft_strstr.c
        ft_printf/libft/ft_strsub.c
        ft_printf/libft/ft_strtrim.c
        ft_printf/libft/ft_swap_byte.c
        ft_printf/libft/ft_swap_n_bytes.c
        ft_printf/libft/ft_this_all_files_is_same.c
        ft_printf/libft/ft_this_all_files_is_same_free.c
        ft_printf/libft/ft_this_files_is_same.c
        ft_printf/libft/ft_tolower.c
        ft_printf/libft/ft_toupper.c
        ft_printf/libft/get_next_line.c
        ft_printf/sources/charer.c
        ft_printf/sources/check_flags.c
        ft_printf/sources/first_flag_before.c
        ft_printf/sources/fixer.c
        ft_printf/sources/fixer_free.c
        ft_printf/sources/fixer_num.c
        ft_printf/sources/fixer_p.c
        ft_printf/sources/fixer_str.c
        ft_printf/sources/flag_begin_chek.c
        ft_printf/sources/flag_nuller.c
        ft_printf/sources/ft_itoa_base_long.c
        ft_printf/sources/ft_itoa_specific.c
        ft_printf/sources/ft_itoa_specific_part_1.c
        ft_printf/sources/ft_itoa_specific_part_2.c
        ft_printf/sources/ft_printf.c
        ft_printf/sources/is_it_flag.c
        ft_printf/sources/just_to_print_len.c
        ft_printf/sources/ok.c
        ft_printf/sources/only_1_flag.c
        ft_printf/sources/out_from_flag.c
        ft_printf/sources/out_str.c
        ft_printf/sources/post_persent.c
        ft_printf/sources/print_flag_d.c
        ft_printf/sources/print_flag_f.c
        ft_printf/sources/print_flag_o.c
        ft_printf/sources/print_flag_p.c
        ft_printf/sources/print_flag_sc.c
        ft_printf/sources/print_flag_u.c
        ft_printf/sources/print_flag_x.c
        ft_printf/sources/printer.c
        ft_printf/sources/second_flag.c
        ft_printf/sources/size_flag.c
        minilibx_macos/font.c
        minilibx_macos/mlx.h
        minilibx_macos/mlx_init_loop.m
        minilibx_macos/mlx_int.h
        minilibx_macos/mlx_int_str_to_wordtab.c
        minilibx_macos/mlx_new_image.m
        minilibx_macos/mlx_new_window.h
        minilibx_macos/mlx_new_window.m
        minilibx_macos/mlx_rgb.c
        minilibx_macos/mlx_shaders.c
        minilibx_macos/mlx_xpm.c
        draw.c
        fdf.h
        isometric.c
        mian.c
        read_file.c
        x_count.c)
